--- a/myIndex.html
+++ b/myIndex.html
@@ -12,24 +12,25 @@
 <body>
     <div id="root">
 
-        
-        <h1 style="text-align: center;">My Favourite Albums of All Times</h1>
-        <select name="" id="" v-model="searchGenre">
-            <option value="" disabled selected>Scegli un genere</option>
-            <option value="rock">Rock</option>
-            <option value="pop">Pop</option>
-            <option value="jazz">Jazz</option>
-            <option value="metal">Metal</option>
-        </select>
-        <button @click="fetchData()">Ricerca per genere </button>
+        <div class="top-part">
+            <h1>My Favourite Albums of All Times</h1>
+            <select name="" id="" v-model="searchGenre" @click="fetchData()">
+                <option value="" disabled selected>Scegli un genere</option>
+                <option value="">Tutti i generi</option>
+                <option value="rock">Rock</option>
+                <option value="pop">Pop</option>
+                <option value="jazz">Jazz</option>
+                <option value="metal">Metal</option>
+            </select>
+        </div>
 
         <div class="container flex">
             <div v-for="card in discs" class='flex flex-column album'>
                 <img :src="card.poster" alt="">
                 <h2>{{card.title}}</h2>
-                <p>{{card.author}}</p>
-                <p>{{card.genre}}</p>
-                <p>{{card.year}}</p>
+                <p><strong>Artist:</strong> {{card.author}}</p>
+                <p><strong>Genre:</strong> {{card.genre}}</p>
+                <p><strong>Year:</strong> {{card.year}}</p>
             </div>
         </div>
     </div>
